Prevent ugly IE scrollbar from overlapping viewport

--- a/app/client/stylesheets/smartervote.import.less
+++ b/app/client/stylesheets/smartervote.import.less
@@ -3,9 +3,10 @@
  * covers the full viewport
  */
  
- body {
-   overflow-y: scroll;
- }
+html {
+  overflow-y: scroll;
+  -ms-overflow-style: scrollbar; // Prevent IE scrollbar from overlapping viewport
+}
  
 #smartervote {
   position: absolute;
@@ -112,7 +113,7 @@
 #bubbles-container {
   position: fixed;
   left: 0;
-  right: 13px;
+  right: 8px;
   top: 0;
   bottom: 0;
   
